--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-.App {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+ 
+/*.App {
   text-align: center;
 }
 
@@ -36,3 +41,4 @@
     transform: rotate(360deg);
   }
 }
+*/
